# ai-assistant.nvim

./: LICENCE  Makefile  README.md  pyproject.toml  pytest.ini
plugin/: ai-assistant.vim
rplugin/python3/ai-assistant/: __init__.py
rplugin/python3/ai_assistant/: __init__.py  base.py  input.py  output.py  request_chatgpt.py
test/: conftest.py
test/rplugin/python3/ai_assistant/: test_init.py  test_request_chatgpt.py
