[tool.poetry]
name = "ai-assistant-nvim"
version = "0.1.0"
description = ""
authors = ["IwasakiYuuki <2445yuuki@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_assistant"}]

[tool.poetry.dependencies]
python = "^3.8"
neovim = "^0.3.1"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
