[tool.poetry]
name = "ai-assistant-nvim"
version = "0.1.0"
description = ""
authors = ["IwasakiYuuki <2445yuuki@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_assistant"}]

[tool.poetry.dependencies]
python = "^3.8"
neovim = "^0.3.1"
pytest = "^7.2.2"
openai = "^0.27.0"
asyncio = "^3.4.3"
pyvim = "^3.0.3"
pytest-asyncio = "^0.21.0"
anyio = "^3.6.2"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
